# Unit-2-Build

./: .gitignore  Pipfile  README.md  Wrangle.py  app.py  pyproject.toml  test_app.py
tests/: test_unit_2_build.py
the_model_code/Models/: tuned_log  tuned_xgb
the_model_code/NoteBooks/: clean.ipynb  compare.ipynb  forest.ipynb  logreg.ipynb
the_model_code/NoteBooks/.ipynb_checkpoints/: Wrangle-checkpoint.py  dash_app-checkpoint.py
the_model_code/NoteBooks/misc/.ipynb_checkpoints/: scrape-checkpoint.ipynb
unit_2_build/: Wrangle.py  clean.csv  clean.ipynb  models.ipynb  predict.ipynb  scrape.ipynb  test.ipynb
unit_2_build/.ipynb_checkpoints/: Wrangle-checkpoint.py  clean-checkpoint.ipynb  names-checkpoint.csv  scrape-checkpoint.ipynb
unit_2_build/DATA/.ipynb_checkpoints/: clean-checkpoint.csv
unit_2_build/Models/: log  xgb
unit_2_build/NoteBooks/: clean.ipynb  compare.ipynb  dash_app.ipynb  forest.ipynb  logreg.ipynb  predict.ipynb  xgb.ipynb
unit_2_build/NoteBooks/.ipynb_checkpoints/: clean-checkpoint.ipynb  compare-checkpoint.ipynb  dash_app-checkpoint.ipynb  forest-checkpoint.ipynb  logreg-checkpoint.ipynb  predict-checkpoint.ipynb
