[tool.poetry]
name = "unit-2-build"
version = "0.1.0"
description = ""
authors = ["Allan Gongora <agongora4030@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter = "^1.0.0"
lab = "^6.0"
scikit-learn = "^0.23.1"
category_encoders = "^2.2.2"
pandas-profiling = "^2.8.0"
pdpbox = "^0.2.0"
shap = "^0.35.0"
seaborn = "^0.10.1"
plotly = "^4.9.0"
beautifulsoup4 = "^4.9.1"
selenium = "^3.141.0"
jupyterlab = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
