[tool.poetry]
name = "unit-2-build"
version = "0.1.0"
description = ""
authors = ["Allan Gongora <agongora4030@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.2"
scikit-learn = "^0.23.1"
category-encoders = "^2.2.2"
xgboost = "^1.1.1"
pandas-profiling = "^2.8.0"
dash = "^1.14.0"
dash-bootstrap-components = "^0.10.3"
shap = "^0.35.0"
dash-html-components = "^1.0.3"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
